Fix mobile navbar menu icon color for contrast

--- a/css/style.css
+++ b/css/style.css
@@ -310,8 +310,10 @@ a {
     border-bottom: 1px solid #f3f3f4 !important; }
   .site-navbar .site-navigation .site-menu {
     margin-bottom: 0; }
-  .site-navbar .site-navigation .site-menu .active > a {
+.site-navbar .site-navigation .site-menu .active > a {
       color: #fff; }
+  .site-navbar .site-menu-toggle {
+    color: #fff !important; }
     .site-navbar .site-navigation .site-menu a {
       text-decoration: none !important;
       font-size: 14px;
